# LLM-Zoomcamp-2026

./: README.md  pyproject.toml
01-agentic-rag/llm-zoomcamp-2026-code/: faq.db  pyproject.toml
01-agentic-rag/llm-zoomcamp-2026-code/01-agentic-rag/: agents.ipynb  lessons.ipynb  persistent_rag.ipynb  rag_helper.py  sqlite-ingest.ipynb
02-vector-search/homework/: Homework.ipynb  pyproject.toml
02-vector-search/lessons/: 01-embeddings.ipynb  02-RAG-vector.ipynb  03-sqlitesearch-vector.ipynb  04-pgvector.ipynb  rag_helper.py
04-evaluation/homework/: homework.ipynb
04-evaluation/homework/.ipynb_checkpoints/: evaluation_utils-checkpoint.py  homework-checkpoint.ipynb  pyproject-checkpoint.toml
04-evaluation/lessons/: 02-ground-truth.ipynb  03-ground-truth-batch.ipynb  04-search-evaluation.ipynb  12-rag-answers.ipynb  13-llm-as-judge.ipynb  14-agent-evaluation.ipynb  evaluation_utils.py
04-evaluation/lessons/.ipynb_checkpoints/: 02-ground-truth-checkpoint.ipynb
05-monitoring/homework/: main.py  pyproject.toml  rag_helper.py  starter.py  traces.db
05-monitoring/homework/.ipynb_checkpoints/: homework5-checkpoint.ipynb
05-monitoring/lessons/: app.py  assistant.py  dashboard.py  db_init.py  db_query.py  generate_data.py  judge.py  metrics.py  rag_helper.py
