[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.2",
    "streamlit>=1.59.2",
    "tqdm>=4.68.3",
]

[tool.uv.workspace]
members = [
    "04-evaluation/homework",
]
